@@ -5,7 +5,8 @@ Change log for gocept.jsform
 0.7 (unreleased)
 ================
 
-- Nothing changed yet.
+- Add ability to send a CSRF token with every request. This token must be
+  available via the id `csrf_token` (can be customized) in the DOM.
 
 
 0.6 (2013-09-06)
